Fixed scrollbar y-rail visible without being active

--- a/wcfsetup/install/files/style/layout.less
+++ b/wcfsetup/install/files/style/layout.less
@@ -2422,10 +2422,15 @@ see: http://beta.woltlab.com/index.php/Thread/3874-Kosmetik-Darstellungsfehler-I
 		background-color: rgba(102, 102, 102, .6);
 	}
 	
+	&.ps-active-y > .ps-scrollbar-y-rail {
+		display: block;
+	}
+	
 	> .ps-scrollbar-y-rail {
 		background-color: rgba(102, 102, 102, 0);
 		border-radius: 4px;
 		bottom: 0;
+		display: none;
 		position: absolute;
 		right: 2px;
 		width: 8px;
